--- a/StarCraft.API/StarCraft.API/wwwroot/package.json
+++ b/StarCraft.API/StarCraft.API/wwwroot/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.3.0",
+    "@types/webpack": "^5.28.1",
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "@types/webpack-dev-server": "^4.7.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
