--- a/StarCraft.API/StarCraft.API/wwwroot/package.json
+++ b/StarCraft.API/StarCraft.API/wwwroot/package.json
@@ -4,25 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve  --env port=3000",
+    "build:prod": "webpack --env mode=production",
+    "build:dev": "webpack --env mode=development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.3.0",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.1",
+    "@types/webpack-dev-server": "^4.7.2",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
-    "webpack": "^5.69.1",
+    "webpack": "^5.86.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@types/webpack-dev-server": "^4.7.2",
+    "css-loader": "^6.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass": "^1.63.3",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "webpack-dev-server": "^4.7.4"
   }
 }
