added router and className

--- a/StarCraft.API/StarCraft.API/wwwroot/src/tsconfig.json
+++ b/StarCraft.API/StarCraft.API/wwwroot/src/tsconfig.json
@@ -8,7 +8,7 @@
         // Это означает лишь, что в подобных ситациях разработчик должен явно писать any
         // (Я пиздец как рад, что такая настройка есть)
         "noImplicitAny": true,
-        "module": "es6",
+        "module": "ESNext",
 
         // В какую спецификацию компилируем: для поддержки большинства браузеров
         "target": "es5",
