--- a/StarCraft.API/StarCraft.API/wwwroot/package.json
+++ b/StarCraft.API/StarCraft.API/wwwroot/package.json
@@ -18,6 +18,7 @@
     "@types/webpack": "^5.28.1",
     "@types/webpack-dev-server": "^4.7.2",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
@@ -25,9 +26,11 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "css-loader": "^6.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
