--- a/StarCraft.API/StarCraft.API/wwwroot/package.json
+++ b/StarCraft.API/StarCraft.API/wwwroot/package.json
@@ -34,6 +34,7 @@
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "typescript-plugin-css-modules": "^5.0.1",
     "webpack-dev-server": "^4.7.4"
   }
 }
