--- a/StarCraft.API/StarCraft.API/wwwroot/src/tsconfig.json
+++ b/StarCraft.API/StarCraft.API/wwwroot/src/tsconfig.json
@@ -3,6 +3,8 @@
         // В видосе сказал, что эта настройка не нужна, так как у нас уже есть webpack
         "outDir": "./dist/",
 
+        // className = classes. ... Intellisense
+        "plugins": [{ "name": "typescript-plugin-css-modules" }],
         // Подсвечивает все места, где не указан тип
         // Однако это не значит, что теперь вовсе нельзя использовать any
         // Это означает лишь, что в подобных ситациях разработчик должен явно писать any
@@ -34,7 +36,7 @@
         "esModuleInterop": true,
 
         // Если какая-либо библиоткеа не имеет default import
-        // ладеры вроде ts-loader или babel-loader автоматически создают их 
+        // лоадеры вроде ts-loader или babel-loader автоматически создают их 
         // вместо такого импорта 
         // import * as React from 'react';
         // можно писать такой
@@ -45,7 +47,7 @@
     //Хз, зачем это, но у меня ничего не падало
     "ts-node": {
         "compilerOptions": {
-            "module": "CommonJS"
+            "module": "CommonJS",
         }
     }
 }
